--- a/index.html
+++ b/index.html
@@ -103,26 +103,21 @@
 
 
 <h3 class="title-summary">Profilo personale / Chi sono</h3>
-<p class="text-summary">Sono una parrucchiera principiante, appassionata del mio lavoro e alla ricerca di un'opportunità come assistente parrucchiere. Ho completato un corso pratico di formazione professionale in parrucchieria e ho acquisito competenze specializzate in trattamenti come keratina, botox e nanoplasti in Ucraina.
+<p class="text-summary">Sono una parrucchiera principiante, appassionata del mio lavoro e alla ricerca di un'opportunità come assistente parrucchiere. Ho completato un corso pratico di formazione professionale in parrucchieria e ho acquisito competenze specializzate in trattamenti come cheratina e botox in Ucraina.
 
 La mia aspirazione è diventare una professionista qualificata nel settore e sono pronta a impegnarmi con dedizione per apprendere, crescere e offrire un servizio eccellente ai clienti.</p>
 
 <h3 class="title-work-experience">Esperienza lavorativa</h3>
 
-<p class="text-summary">Esperienza pratica in salone Hair studio Rimini – periodo festivo.
-
-Piccola esperienza lavorativa in salone durante le vacanze invernali.
-
-Supporto nelle attività quotidiane del salone e assistenza ai parrucchieri.
-
-Contatto con i clienti e apprendimento delle tecniche base di styling. </p>
-<p class="year-school-goit">2024-2025</p>
+<p class="text-summary">Esperienza pratica in salone – Hair Studio Rimini.
+Breve esperienza lavorativa in salone durante le vacanze invernali, con supporto nelle attività quotidiane e assistenza ai parrucchieri. Lavaggio dei capelli, supporto nelle attività di colorazione, realizzazione di piega liscia e mossa. Contatto diretto con i clienti e apprendimento delle tecniche base di styling. </p>
+<!-- <p class="year-school-goit">2024-2025</p>
 <p class="name-work">La compagnia di trasporti – PremierService SRL</p>
 <p class="item-work">Impiegata specifiche prodotto</p>
 <p class="item-work">2011-2016</p>
 <p class="name-work">Hotel Cristallo</p>
 <p class="item-work">Addetta alle pulizie</p>
-<p class="year-school-goit">2022-2024</p>
+<p class="year-school-goit">2022-2024</p> -->
 <h3 class="title-education">Education</h3>
 <p class="item-work">Corso parrucchiere</p>
 <p class="year-school-goit">2024-2025</p>
